--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@shopify/flash-list": "2.0.2",
     "@supabase/supabase-js": "^2.49.0",
     "expo": "~54.0.0",
@@ -28,6 +29,7 @@
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "nativewind": "^4.1.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
